force-app/main/default/objects/Form_Master_Data__c/Form_Master_Data__c.object-meta.xml
<CustomObject>
    <label>Form Master Data</label>
    <nameField>
        <displayFormat>APP-{0000}</displayFormat>
        <label>Forms Master Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Master Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>