force-app/main/default/objects/Form_Master_Data__c/fields/FM_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>FM_Data_Type__c</fullName>
    <label>FM Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Section</fullName>
                <default>true</default>
                <label>Section</label>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Text Area</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>File Upload</fullName>
            </value>
            <value>
                <fullName>Additional Q</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>