force-app/main/default/objects/Form_Master_Data__c/fields/Form_Question__c.field-meta.xml
<CustomField>
    <fullName>Form_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Question</label>
    <referenceTo>Form_Master_Data__c</referenceTo>
    <relationshipLabel>Form Master Data (Form Question)</relationshipLabel>
    <relationshipName>Form_Master_Data3</relationshipName>
    <type>Lookup</type>
</CustomField>