force-app/main/default/objects/Form_Master_Data__c/fields/Page__c.field-meta.xml
<CustomField>
    <fullName>Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Page</label>
    <referenceTo>Form_Master_Data__c</referenceTo>
    <relationshipLabel>Form Master Data (Page)</relationshipLabel>
    <relationshipName>Form_Master_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>