force-app/main/default/objects/Form_Master_Data__c/fields/Parent_Question__c.field-meta.xml
<CustomField>
    <fullName>Parent_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Question</label>
    <referenceTo>Form_Master_Data__c</referenceTo>
    <relationshipLabel>Form Master Data (Parent Question)</relationshipLabel>
    <relationshipName>Form_Master_Data4</relationshipName>
    <type>Lookup</type>
</CustomField>