force-app/main/default/objects/Form_Master_Data__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Form_Master_Data__c</referenceTo>
    <relationshipLabel>Form Master Data</relationshipLabel>
    <relationshipName>Form_Master_Data</relationshipName>
    <type>Lookup</type>
</CustomField>