force-app/main/default/objects/Form_Master_Data__c/fields/Requied__c.field-meta.xml
<CustomField>
    <fullName>Requied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requied</label>
    <type>Checkbox</type>
</CustomField>