force-app/main/default/objects/Form_Master_Data__c/fields/Response_for_Additional_Question__c.field-meta.xml
<CustomField>
    <fullName>Response_for_Additional_Question__c</fullName>
    <label>Response for Additional Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>