force-app/main/default/objects/Form_Master_Data__c/fields/Secondary_Text_Rich__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Text_Rich__c</fullName>
    <label>Secondary Text Rich</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>