force-app/main/default/objects/Form_Master_Data__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <referenceTo>Form_Master_Data__c</referenceTo>
    <relationshipLabel>Form Master Data (Section)</relationshipLabel>
    <relationshipName>Form_Master_Data2</relationshipName>
    <type>Lookup</type>
</CustomField>