force-app/main/default/objects/Form_Master_Data__c/fields/Section_Layout__c.field-meta.xml
<CustomField>
    <fullName>Section_Layout__c</fullName>
    <label>Section Layout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Column</fullName>
            </value>
            <value>
                <fullName>2 Columns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>