force-app/main/default/objects/Form_Master_Data__c/recordTypes/Form_Question.recordType-meta.xml
<RecordType>
    <fullName>Form_Question</fullName>
    <active>true</active>
    <label>Form Question</label>
</RecordType>