force-app/main/default/objects/Form_Master_Data__c/recordTypes/Page.recordType-meta.xml
<RecordType>
    <fullName>Page</fullName>
    <active>true</active>
    <label>Page</label>
</RecordType>